fix: pnpm dev で発生してエラーの修正

--- a/packages/web/app/locales/en-US/layout.json
+++ b/packages/web/app/locales/en-US/layout.json
@@ -1,7 +1,6 @@
 {
   "auth": {
-    "login": "Log in",
-    "logout": "Log out"
+    "login": "Login"
   },
   "accessibility": {
     "closeMenu": "Close menu"
