--- a/packages/web/app/locales/ja-JP/layout.json
+++ b/packages/web/app/locales/ja-JP/layout.json
@@ -1,7 +1,6 @@
 {
   "auth": {
-    "login": "ログイン",
-    "logout": "ログアウト"
+    "login": "ログイン"
   },
   "accessibility": {
     "closeMenu": "メニューを閉じる"
