--- a/packages/web/docs/読みやすいコードの基本原則.md
+++ b/packages/web/docs/読みやすいコードの基本原則.md
@@ -1,21 +1,24 @@
 # 読みやすいコードの基本原則
 
-## 6つの基本原則
+## 7つの基本原則
 
 1. ひとつの処理の単位はディスプレイで一度に表示できる範囲に収めること
 2. 意味を持つデータには適切な名前をつけて変数化すること
 
-typescript // 悪い例
+```
+// 悪い例
 if (user.age > 18 && user.status === 'active') { ... }
 
 // 良い例
 const isAdult = user.age > 18;
 const isActiveUser = user.status === 'active';
 if (isAdult && isActiveUser) { ... }
+```
 
-意味を持つ処理には適切な名前をつけて関数化すること
+3. 意味を持つ処理には適切な名前をつけて関数化すること
 
-typescript // 悪い例
+```
+// 悪い例
 const total = items.reduce((sum, item) => sum + item.price \* 1.1, 0);
 
 // 良い例
@@ -23,11 +26,12 @@ function calculateTotalWithTax(items: Item[]): number {
 return items.reduce((sum, item) => sum + item.price \* 1.1, 0);
 }
 const total = calculateTotalWithTax(items);
+```
 
-3. 同じ役割・意味を持つ変数や関数には一貫した名前をつけ、異なる役割・意味を持つ変数や関数には同じ名前をつけないこと
-4. 2, 3, 4 を守ってもコードに反映されない「そのコードを書いた意図」はコメントとして残すこと 読みやすいコードを書く
-5. プログラムは上から下へ読める順序で構成（インポート→ヘルパー関数→クラス定義）
-6. ファイル・クラス・関数の役割をdocstringで説明 読みやすいコードを書く
+4. 同じ役割・意味を持つ変数や関数には一貫した名前をつけ、異なる役割・意味を持つ変数や関数には同じ名前をつけないこと
+5. 2, 3, 4 を守ってもコードに反映されない「そのコードを書いた意図」はコメントとして残すこと 読みやすいコードを書く
+6. プログラムは上から下へ読める順序で構成（ex. インポート → ヘルパー関数 → クラス定義）
+7. ファイル・クラス・関数の役割をdocstringで説明 読みやすいコードを書く
 
 ## 命名規則のルール
 
