--- a/packages/web/docs/コンポーネントのコロケーション構造.md
+++ b/packages/web/docs/コンポーネントのコロケーション構造.md
@@ -43,6 +43,7 @@ comp/
 ## index.ts のエクスポートルール
 
 ### **エクスポート順序**
+
 1. メインコンポーネント
 2. 型・enum（schemas.ts から）
 3. スキーマ（バリデーション用）
@@ -50,162 +51,36 @@ comp/
 5. Context・hooks（カスタム実装用）
 
 ### **例:**
+
 ```typescript
-// メインコンポーネント
-export { VideoEditor } from './video-editor';
-
-// 型・enum
-export type {
-  VideoProject,
-  InitialTrack,
-  // ...
-} from './schemas';
-
-export {
-  TextAlign,
-  VideoLayout,
-  // ...
-} from './schemas';
-
-// スキーマ（バリデーション用）
-export {
-  videoProjectSchema,
-  initialTrackSchema,
-  // ...
-} from './schemas';
-
-// サブコンポーネント（上級者用）
-export { VideoEditorCanvas } from './video-editor-canvas';
-export { VideoEditorControl } from './video-editor-control';
-
-// Context・hooks（カスタム実装用）
-export { VideoEditorProvider, useVideoEditor } from './contexts';
-export type { VideoEditorState, VideoEditorActions } from './contexts';
+export * from './video-editor';
+export * from './schemas';
+export * from './video-editor-canvas';
+export * from './video-editor-control';
+export * from './contexts';
 ```
 
 ## schemas.ts のルール
 
 ### **基本原則**
+
 - コンポーネント専用の型・バリデーション・enumのみ定義
 - グローバルに使用される型は `app/types/` に配置
 - zodスキーマから型を推論 (`z.infer<typeof schema>`)
 
 ### **enum定義**
-- TypeScript enum として定義・エクスポート
+
+- TypeScript as const として定義・エクスポート
 - zodスキーマでは `z.enum(EnumName)` を使用（zod 4以降）
 - 命名規則: PascalCase（例: `TextAlign`, `VideoFormat`）
-- 値は kebab-case または snake_case（例: `'left'`, `'scale-down'`）
 
 ### **スキーマ定義**
+
 - 各スキーマには適切なバリデーションを追加
 - オプショナルフィールドは `.optional()` を使用
 - 数値は適切な範囲制限を設定（例: `.min(0).max(1)` for volume）
 
 ### **型エクスポート**
+
 - zodスキーマから推論された型をエクスポート
 - 型名はスキーマ名から "Schema" を除いた形（例: `videoProjectSchema` → `VideoProject`）
-
-### **例:**
-```typescript
-import { z } from 'zod';
-
-// enum定義
-export enum TextAlign {
-  LEFT = 'left',
-  CENTER = 'center',
-  RIGHT = 'right',
-}
-
-export enum Quality {
-  LOW = 'low',
-  MEDIUM = 'medium',
-  HIGH = 'high',
-}
-
-// zodスキーマ定義
-export const textTrackSchema = z.object({
-  text: z.string(),
-  fontSize: z.number().positive().optional(),
-  textAlign: z.enum(TextAlign).optional(),
-  color: z.string().optional(),
-});
-
-export const projectSettingsSchema = z.object({
-  quality: z.enum(Quality).optional(),
-  backgroundColor: z.string().optional(),
-}).optional();
-
-// 型エクスポート（スキーマから推論）
-export type TextTrack = z.infer<typeof textTrackSchema>;
-export type ProjectSettings = z.infer<typeof projectSettingsSchema>;
-```
-
-### **utils.ts との連携**
-- utils.ts でenumの値をデフォルト値として使用
-- スキーマと型をimportして型安全なユーティリティ関数を作成
-
-```typescript
-// utils.ts での使用例
-import { TextAlign, type TextTrack } from './schemas';
-
-export function createDefaultTextTrack(): Partial<TextTrack> {
-  return {
-    textAlign: TextAlign.CENTER, // enumの値を使用
-    fontSize: 32,
-    color: '#ffffff',
-  };
-}
-```
-
-## utils.ts のルール
-
-### **基本原則**
-- コンポーネント専用のユーティリティ関数のみ定義
-- 型安全性を重視し、schemas.ts の型・enumを活用
-- 純粋関数として実装（副作用なし）
-
-### **関数定義**
-- JSDocコメントで関数の目的を明記
-- 適切な型注釈を追加
-- デフォルト値にはenumを使用
-
-### **例:**
-```typescript
-import type { VideoTrack } from './contexts';
-import type { InitialTrack } from './schemas';
-import { TextAlign, VideoLayout, ObjectFit } from './schemas';
-
-/**
- * InitialTrackをVideoTrackに変換する
- * 外部API形式から内部形式への変換を行う
- */
-export function convertInitialTrackToVideoTrack(
-  initialTrack: InitialTrack,
-  index: number,
-  effectiveWidth: number,
-  effectiveHeight: number
-): VideoTrack {
-  // enumを使用したデフォルト値設定
-  const textAlign = initialTrack.textAlign ?? TextAlign.CENTER;
-  const layout = initialTrack.layout ?? VideoLayout.FULLSCREEN;
-  const objectFit = initialTrack.objectFit ?? ObjectFit.COVER;
-
-  // 実装...
-}
-
-/**
- * プロジェクトの有効値を解決する
- * 後方互換性を考慮したプロパティ解決
- */
-export function resolveEffectiveValues(
-  project?: VideoProject,
-  fallbackWidth?: number,
-  fallbackHeight?: number
-): EffectiveValues {
-  return {
-    width: project?.output.width ?? fallbackWidth ?? 800,
-    height: project?.output.height ?? fallbackHeight ?? 450,
-    // ...
-  };
-}
-```
